--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <div class="logo">
                 <img src="./public/media/img/logo.png">
         </div>
-        <nav>
-            <ul class="nav">
-                <li class="nav-item"><a class="nav-link active justify-content-start" style="color: black;" href="index.html">Incio</a></li>
-                <li class="nav-item"><a class="nav-link active justify-content-start" style="color: black;" href="finanzas.html">Sobre finanzas</a></li>
-                <li class="nav-item"><a class="nav-link active justify-content-start" style="color: black;" href="aprende.html">Aprende</a></li>
-                <li class="nav-item"><a class="nav-link active justify-content-start" style="color: black;" href="calculadora.html">Tu calculadora</a></li>
-                <li class="nav-item"><a class="nav-link active justify-content-end"  style="color: black;" href="registro.html"><b>Regístrate</b></a></li>
+        <nav class="navbar">
+            <ul class="nav d-flex w-100">
+                <li class="nav-item"><a class="nav-link active" style="color: black;" href="index.html">Incio</a></li>
+                <li class="nav-item"><a class="nav-link active" style="color: black;" href="finanzas.html">Sobre finanzas</a></li>
+                <li class="nav-item"><a class="nav-link active" style="color: black;" href="aprende.html">Aprende</a></li>
+                <li class="nav-item"><a class="nav-link active" style="color: black;" href="calculadora.html">Tu calculadora</a></li>
+                <li class="nav-item"><a class="nav-link active"  style="color: black;" href="registro.html"><b>Regístrate</b></a></li>
             </ul>
         </nav>
     </header>
@@ -28,17 +28,19 @@
         <div class="carousel-item active">
             <img src="./public/media/img/finanzas1.jpg" class="d-block w-100" alt="imagenPrincipal1">
           <div class="frase1">
-        <h1>"Todos somos vulnerables a las creencias que nos resultan convenientes".</h1>
-        <p>Paul Krugman</p> 
+        <h1>"Todos somos vulnerables a las creencias 
+          <br>que nos resultan convenientes".</h1>
+        <h4>Paul Krugman</h4> 
           </div>
         </div>
         <div class="carousel-item">
             <img src="./public/media/img/finanzas2.jpg" class="d-block w-100" alt="imagenPrincipal2">
           <div class="frase2">
         <h1>"El dinero, como las emociones,
-          <br>es algo que debes controlar para mantener
-          <br> tu vida en el camino correcto".</h1>
-        <p>Natasha Munson</p> 
+          <br>es algo que debes controlar para 
+          <br>mantener tu vida en el camino
+          <br>correcto".</h1>
+        <h4>Natasha Munson</h4> 
           </div>
         </div>
         <div class="carousel-item">
@@ -47,7 +49,7 @@
         <h1>"No es necesario hacer cosas  
           <br>extraordinarias para conseguir
           <br> resultados extraordinarios".</h1>
-        <p>Warren Buffett</p> 
+        <h4>Warren Buffett</h4> 
           </div>
         </div>
     </div>
