--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="paginicio">
-    <header class="navbar navbar bg-warningnavbar bg-warning">
-        <div class="logo">
-                <img src="./public/media/img/logo.png">
-        </div>
-        <nav class="navbar">
-            <ul class="nav d-flex w-100">
+    <header class="navbar navbar bg-warning">
+        <div class="d-flex w-100 align-items-center">
+          <div class="logo">
+            <img src="./public/media/img/logo.png">
+          </div>
+        
+        <nav class="ms-auto">
+            <ul class="nav">
                 <li class="nav-item"><a class="nav-link active" style="color: black;" href="index.html">Incio</a></li>
                 <li class="nav-item"><a class="nav-link active" style="color: black;" href="finanzas.html">Sobre finanzas</a></li>
                 <li class="nav-item"><a class="nav-link active" style="color: black;" href="aprende.html">Aprende</a></li>
@@ -22,6 +24,7 @@
                 <li class="nav-item"><a class="nav-link active"  style="color: black;" href="registro.html"><b>Regístrate</b></a></li>
             </ul>
         </nav>
+      </div>
     </header>
   <div id="carouselAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
